// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prestodb query dimensions with underscore filter: dimensions 1`] = `
Array [
  Object {
    "Orders.status": "cancelled_by_customer",
  },
]
`;

exports[`prestodb query dimensions: dimensions 1`] = `
Array [
  Object {
    "Orders.status": "processed",
    "Orders.totalAmount": "800",
  },
  Object {
    "Orders.status": "cancelled_by_customer",
    "Orders.totalAmount": "700",
  },
  Object {
    "Orders.status": "shipped",
    "Orders.totalAmount": "600",
  },
  Object {
    "Orders.status": "new",
    "Orders.totalAmount": "300",
  },
]
`;

exports[`prestodb query measure: query 1`] = `
Array [
  Object {
    "Orders.totalAmount": "2400",
  },
]
`;
